# python_tbb

./: .gitmodules  CMakeLists.txt  README.md
src/: backend.cpp  frontend.py
